# vpn-home-rs

./: .cargo_sqlx.sh  .gitignore  .pre-commit-clippy.sh  .pre-commit-config.yaml  .pre-commit-sqlx.sh  .start_auth.sh  .start_batch.sh  .start_server.sh  Cargo.toml
.sqlx/: query-23c220a8dffc6f6f422c21e34e547e84df11fb2c40bf3ee41ce8272f0869256a.json  query-ce5ec6e265a9b90936878f4eb41641434132336b577d6789502b4742105e239b.json
auth/: Cargo.toml
auth/docker/: custom-logging.properties  docker-compose.yml
auth/src/: main.rs
auth/src/dto/: auth.rs
auth/src/handlers/: auth.rs  fallback.rs  mod.rs
auth/src/routes/: mod.rs  users.rs
auth/src/services/: auth.rs
batch/: .start.sh  Cargo.toml
batch/.sqlx/: query-0f42eeb05a4a49bcd0a04ae9c80c40e63a2a41e926d48a95bf564e994fc01515.json  query-6def8c84d336e6f0183eef5e93a3c560b454195ab01c565ae88e957ea3535540.json  query-71b3e92008a9b0dd3fba7e5c351a7aa0f10b295d9ab9b5636035fd7febe525b3.json
batch/src/: config.rs  lib.rs  main.rs
batch/src/entities/: error.rs  mod.rs  resource.rs  wireguard.rs
batch/src/handlers/: message_handler.rs
batch/src/infrastructure/: mod.rs
batch/src/infrastructure/persistence/: clients_repository.rs  mod.rs  request_repository.rs  servers_repository.rs
batch/src/infrastructure/persistence/postgres/: mod.rs  postgres_clients_repository.rs  postgres_reqeust_repostory.rs  postgres_servers_repository.rs
batch/src/listeners/: sqs_listener.rs
db/ddl/: clients.sql  servers.sql  terminals.sql  users.sql  vpns.sql
docker/: docker-compose.yml
libs/: Cargo.toml
libs/src/entities/: clients.rs  errors.rs  ids.rs  messages.rs  mod.rs  responses.rs  servers.rs  terminals.rs  vpns.rs
server/: .cargo_check.sh  Cargo.toml
server/.sqlx/: query-472ee9530a6204b1c37b2da15daeb898be30c07bb5998718ecb0744d0ce665f3.json  query-631b8da6e77c894a27fff822a5b3ac63df1e545d7b2171f34b2f1c976b5ec443.json  query-8ea13d7d834a1f773bf836a325dc692d98da8ebda934767ceb0d8bf9aabfcae2.json  query-d320e946a52942f1cecbf94451f523a1e5dfd3e2997915b32039b55a2f830899.json  query-e2762be0e2de9db319142eb1cc3955dfa452a2befb6e6aac7052da17157641ad.json  query-e448f265c7ec2b17953ffbf089f1faef454b9f8d799bc6847e4c40a1aec14027.json  query-fc4e65ad132810320f1086c409e71955338cb0c65715724e0d4a4b887cef31c0.json
server/db/ddl/: clients.sql  request_executions.sql  terminals.sql  vpns.sql
server/db/docker/: docker-compose.yaml
server/db/erd/: vpn.erd
server/src/: config.rs  main.rs
server/src/entities/: approvals.rs  clients.rs  errors.rs  ids.rs  mod.rs  responses.rs  vpns.rs
server/src/entities/dto/: messages.rs  mod.rs  response_dto.rs
server/src/handlers/: mod.rs  vpns_handler.rs
server/src/handlers/dto/: client_create_dto.rs  mod.rs
server/src/repositories/: clients_repository.rs  servers_repository.rs  terminals_repository.rs  vpns_repository.rs
server/src/repositories/postgres/: postgres_clients_repository.rs  postgres_servers_repository.rs  postgres_terminals_repository.rs  postgres_vpns_repository.rs
server/src/routes/: router.rs
server/src/services/: clients_service.rs  message_queue_service.rs  mod.rs  servers_service.rs  terminals_service.rs  vpns_service.rs
src/: config.rs  lib.rs  main.rs
src/dto/: auth.rs
src/dto/auth/: callback.rs  mod.rs
src/entities/: clients.rs  mod.rs  servers.rs  terminals.rs  vpns.rs
src/entities/dto/: messages.rs  mod.rs
src/handlers/: auth.rs  clients_handler.rs  message_handler.rs  mod.rs  servers_handler.rs  users.rs  vpns_handler.rs
src/listeners/: sqs_listener.rs
src/repositories/: clients_repository.rs  mod.rs  servers_repository.rs  terminals_repository.rs
src/repositories/postgres/: mod.rs  postgres_clients_repository.rs  postgres_servers_repository.rs  postgres_terminals_repository.rs  postgres_vpns_repository.rs
src/routes/: auth.rs  clients_router.rs  mod.rs  peers.rs  router.rs  servers_router.rs  vpns_router.rs
src/services/: auth.rs  clients_service.rs  mod.rs  servers_service.rs  terminals_service.rs  vpns_service.rs
