[package]
name = "vpn-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features=["full"]}
defguard_wireguard_rs = "0.7"
axum = "0.8"
tower="0.5"
serde = "1.0"
serde_json = "1.0"
openidconnect = {version="4.0.0"}
dotenvy="0.15"
envy="0.4"
env_logger="0.11"
log = "0.4.27"
anyhow="1.0"
axum_session = "0.16.0"
jsonwebtoken = "9.3.1"
