[package]
name = "vpn-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features=["full"]}
defguard_wireguard_rs = "0.7"
axum = "0.8"
axum_session = "0.16.0"
axum-cookie = "0.2.3"
tower="0.5"
tower-http = {version="0.6.6", features=["cors"]}
serde = "1.0"
serde_json = "1.0"
dotenvy="0.15"
envy="0.4"
env_logger="0.11"
log = "0.4.27"
anyhow="1.0"
uuid ={ version="1.17.0", features=["v4"]}
chrono = "0.4.41"
ipnet = {version="2.9", features=["serde"]}
async-trait = "0.1.88"
sqlx = {version="0.8", features=["runtime-tokio","tls-rustls","postgres", "ipnet","uuid", "chrono","derive"]}
base64 = "0.22.1"
