[package]
name = "vpn-batch-common-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
vpn-server-rs = {git ="https://github.com/flactain/vpn-server-rs.git"}
tokio = {version = "1", features=["full"]}
defguard_wireguard_rs = "0.7"
axum = "0.8"
serde = "1.0"
serde_json = "1.0"
dotenvy="0.15"
envy="0.4"
env_logger="0.11"
log = "0.4.27"
anyhow="1.0"
uuid ={ version="1.17.0", features=["v7"]}
chrono = "0.4.41"
ipnet = {version="2.9", features=["serde"]}
async-trait = "0.1.88"
sqlx = {version="0.8", features=["runtime-tokio","tls-rustls","postgres", "ipnet","uuid", "chrono","derive"]}
base64 = "0.22.1"
aws-config = "1.8.4"
aws-sdk-sqs = "1.79.0"
