[package]
name = "vpn-libs"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
uuid ={ version="1.17.0", features=["v7"]}
chrono = "0.4.41"
sqlx = {version="0.8", features=["runtime-tokio","tls-rustls","postgres", "ipnet","uuid", "chrono","derive"]}
base64 = "0.22.1"
log = "0.4.27"
thiserror = "2.0.12"
axum = "0.8"
anyhow="1.0"
